--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ https://templatemo.com/tm-531-reflux
                 </p>
               </div>
             </div>
+            
           </div>
         </div>
         <div class="right-image-post">
@@ -175,9 +176,9 @@ https://templatemo.com/tm-531-reflux
           <div class="isotope-box">
             <div class="isotope-item" data-type="gato">
               <figure class="snip1321">
-                <img src="assets/images/gato_con_botas.jpg" alt="sq-sample26" />
+                <img src="/assets/images/El_gatoconbotas.jpg" alt="sq-sample26" />
                 <figcaption>
-                  <a href="assets/images/gato_con_botas.jpg" data-lightbox="image-1" data-title="Caption"><i
+                  <a href="assets/images/El_gatoconbotas.jpg" data-lightbox="image-1" data-title="Caption"><i
                       class="fa fa-search"></i></a>
                   <h4>Review_Jenifer</h4>
                   <span>puss in boots is a really good movie about friendship and love family. The history show us how
@@ -188,10 +189,10 @@ https://templatemo.com/tm-531-reflux
                     <hr><div class="list-comments">
                       <ul id="items-comments">
                         <li>
-                          <h2>Edwin Dev</h2>
+                          <h2>Jennifer</h2>
                           <hr />
                           <span>
-Me gustó mucho la pelicula
+I really like this movie
                           </span>
                         </li>
                       </ul>
@@ -213,10 +214,10 @@ Me gustó mucho la pelicula
                     <div class="list-comments">
                       <ul id="items-comments">
                         <li>
-                          <h2>Edwin Dev</h2>
+                          <h2>Yesenia</h2>
                           <hr />
                           <span>
-Dejanos tu reseña
+Is fantastic
                           </span>
                         </li>
                       </ul>
@@ -227,9 +228,9 @@ Dejanos tu reseña
 
             <div class="isotope-item" data-type="intensamente">
               <figure class="snip1321">
-                <img src="assets/images/intensamente.jpg" alt="sq-sample26" />
+                <img src="assets/images/inside.jpg" alt="sq-sample26" />
                 <figcaption>
-                  <a href="assets/images/intensamente.jpg" data-lightbox="image-1" data-title="Caption"><i
+                  <a href="assets/images/inside.jpg" data-lightbox="image-1" data-title="Caption"><i
                       class="fa fa-search"></i></a>
                   <h4>Review_Katherine</h4>
                   <span>Inside Out_ emotions are very important in life. How to be prepare to afront differents
@@ -238,13 +239,10 @@ Dejanos tu reseña
                     <div class="list-comments">
                       <ul id="items-comments">
                         <li>
-                          <h2>Edwin Dev</h2>
+                          <h2>Katherine</h2>
                           <hr />
                           <span>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, velit at. Iure eligendi tempore,
-                            aspernatur
-                            aperiam ullam deserunt dolores ad, debitis accusamus quo ab obcaecati? Similique quas sapiente veniam
-                            nulla.
+I love this movie
                           </span>
                         </li>
                       </ul>
@@ -267,13 +265,10 @@ Dejanos tu reseña
                     <div class="list-comments">
                       <ul id="items-comments">
                         <li>
-                          <h2>Edwin Dev</h2>
+                          <h2>  Angelly</h2>
                           <hr />
                           <span>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, velit at. Iure eligendi tempore,
-                            aspernatur
-                            aperiam ullam deserunt dolores ad, debitis accusamus quo ab obcaecati? Similique quas sapiente veniam
-                            nulla.
+This is one of my favorite movies
                           </span>
                         </li>
                       </ul>
